# adaption-devkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  GLOSSARY.md  LICENSE  MAINTENANCE.md  MAP.md  Makefile  README.md  SECURITY.md  TOPICS.md  pyproject.toml  ruff.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  idea.md
.github/workflows/: ci.yml
adaption_kit/: README.md  __init__.py  __main__.py  cards.py  cli.py  convert.py  cover.py  decontaminate.py  doctor.py  preflight.py  publish.py  run.py  suggest.py  verify.py
cookbook/: 01_first_run.ipynb  02_import_from_hf.ipynb  03_publish.ipynb  README.md
cookbook/sample_data/: sample.csv  sample.jsonl
examples/: README.md  marketing_walkthrough.md  math_code_walkthrough.md  qa_walkthrough.md
graphics/: column-mapping-decision.md  command-router.md  credit-safe-run.md  lifecycle.md  publish-flow.md  recipe-matrix.md
guides/: column-mapping.md  gotchas.md  quickstart.md  recipes-and-controls.md  release-checklist.md
templates/: README.md  dataset_card.md  kaggle-dataset-metadata.json  kaggle-metadata-README.md  model_card.md
templates/cover/: README.md  cover.html
templates/dataset_schemas/: README.md  finance.csv  finance.jsonl  marketing.csv  marketing.jsonl  math-and-code.csv  math-and-code.jsonl  qa.csv  qa.jsonl  qa_completion_only.jsonl
tests/: README.md  conftest.py  pytest.ini  test_cards.py  test_convert.py  test_decontaminate.py  test_doctor.py  test_preflight.py  test_suggest.py  test_verify.py
